# ComputerVisionProjects

./: .gitignore  README.md
Project 1 - Motion Detection/utils/: ImageShower.h
Project-1-Motion-Detection/: CMakeLists.txt  main.cpp
Project-1-Motion-Detection/cmake-modules/: OpenCVConfig
Project-1-Motion-Detection/utils/: FrameReader.cpp  FrameReader.h  ImageShower.h
Project-2-Mosaicing/: CMakeLists.txt  main.cpp
Project-2-Mosaicing/utils/: ImageShower.h
Project-3-Dense-Optical-Flow/: CMakeLists.txt  main.cpp
Project-3-Dense-Optical-Flow/utils/: FrameReader.h  ImageShower.h
Project-4-Target-Tracking/: circulant_matrix_tracker.py  david_results_thresh_10.txt  results.txt  tiger2_results_thresh_45.txt
